--- a/03_so_long/1_MLX42/Makefile
+++ b/03_so_long/1_MLX42/Makefile
@@ -6,7 +6,7 @@
 #    By: vsyutkin <vsyutkin@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/18 14:40:43 by vsyutkin          #+#    #+#              #
-#    Updated: 2024/04/18 15:00:53 by vsyutkin         ###   ########.fr        #
+#    Updated: 2024/04/18 17:05:06 by vsyutkin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -35,5 +35,8 @@ clean:
 	@rm -rf $(LIBMLX)/build
 
 fclean: clean
+
+valgrind:
+	
 
 re: clean all fclean
