--- a/03_so_long/Makefile
+++ b/03_so_long/Makefile
@@ -6,7 +6,7 @@
 #    By: vsyutkin <vsyutkin@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/16 16:03:36 by vsyutkin          #+#    #+#              #
-#    Updated: 2024/04/18 16:10:09 by vsyutkin         ###   ########.fr        #
+#    Updated: 2024/04/18 17:03:10 by vsyutkin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,6 +26,8 @@ KEYS = esc.c
 LIBFT_DIR = ./0_LIBFT/
 MLX_DIR = ./1_MLX42/
 KEY_DIR = ./2_KEY/
+
+PROJECT_DIR = $(LIBFT_DIR) $(KEY_DIR)
 
 # ############################################################################ #
 #						# PROJECT FILES DECLARATIONS #						   #
@@ -141,7 +143,7 @@ BACKGROUND_WHITE = \033[47m
 VERSIONS_DIR = ./release_notes/
 
 # Variables
-NORMINETTE_DIR = $(MAIN) $(LIBFT_DIR)
+NORMINETTE_DIR = $(MAIN) $(PROJECT_DIR)
 VERSIONS_NUMBER := $(shell cat $(VERSIONS_DIR)versions.txt)
 COMMIT_FILE = $(VERSIONS_DIR)commits.txt
 COMMIT_ARGS = $(shell cat $(VERSIONS_DIR)last_commit.txt)
