--- a/03_PushSwap_aim_for_100/Makefile
+++ b/03_PushSwap_aim_for_100/Makefile
@@ -150,6 +150,7 @@ echo:
 # ############################################################################ #
 
 clean:
+	$(RM) $(OBJS)
 	$(ARMAKE) clean
 
 fclean: clean
